--- a/app/templates/advanced_features/crypto_dashboard.html
+++ b/app/templates/advanced_features/crypto_dashboard.html
@@ -394,7 +394,7 @@
                         <i class="fas fa-thermometer-half"></i>
                     </div>
                     <h6 class="mb-1">Fear & Greed</h6>
-                    <div class="h4 mb-1">{{ market_stats.get('fear_greed_index', 'N/A') }}</div>
+                    <div class="h4 mb-1">{{ market_stats.get('fear_greed_index', 'Ikke tilgjengelig') }}</div>
                     <small class="positive">Greed</small>
                 </div>
             </div>
@@ -417,20 +417,20 @@
                 <div class="d-flex justify-content-between align-items-start mb-3">
                     <div class="d-flex align-items-center">
                         <div class="crypto-icon me-3">
-                            {% if data.get('symbol', 'N/A') == 'BTC' %}
+                            {% if data.get('symbol', 'Ukjent') == 'BTC' %}
                                 <i class="fab fa-bitcoin"></i>
-                            {% elif data.get('symbol', 'N/A') == 'ETH' %}
+                            {% elif data.get('symbol', 'Ukjent') == 'ETH' %}
                                 <i class="fab fa-ethereum"></i>
                             {% else %}
-                                {{ data.get('symbol', 'N/A')[:2] }}
+                                {{ data.get('symbol', 'UK')[:2] }}
                             {% endif %}
                         </div>
                         <div>
                             <h6 class="mb-0">{{ name }}</h6>
-                            <small class="opacity-75">{{ data.get('symbol', 'N/A') }}</small>
+                            <small class="opacity-75">{{ data.get('symbol', 'Ukjent') }}</small>
                         </div>
                     </div>
-                    <button class="btn btn-sm btn-outline-light add-to-watchlist" data-ticker="{{ data.get('symbol', 'N/A') }}-USD" title="Legg til i watchlist">
+                    <button class="btn btn-sm btn-outline-light add-to-watchlist" data-ticker="{{ data.get('symbol', 'Ukjent') }}-USD" title="Legg til i watchlist">
                         <i class="fas fa-star"></i>
                     </button>
                 </div>
