--- a/app/templates/compare.html
+++ b/app/templates/compare.html
@@ -1,4 +1,4 @@
-{% extends "base_new.html" %}
+{% extends "base.html" %}
 
 {% block title %}Sammenlign Aksjer - Aksjeradar{% endblock %}
 {% block description %}Sammenlign og analyser forskjellige aksjer side om side. Visualiser forskjeller i pris, volum, tekniske indikatorer og nøkkeltall.{% endblock %}
