--- a/app/templates/forum/search.html
+++ b/app/templates/forum/search.html
@@ -1,4 +1,4 @@
-{% extends "base_new.html" %}
+{% extends "base.html" %}
 
 {% block title %}Søk i forum | Aksjeradar{% endblock %}
 {% block description %}Søk i Aksjeradar forum etter temaer og innlegg{% endblock %}
