--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base_new.html" %}
+{% extends "base.html" %}
 
 {% block title %}Aksjeradar - AI-drevne aksjeanalyser | Oslo Børs og globale markeder{% endblock %}
 {% block description %}Norges mest avanserte aksjeplattform. Få AI-drevne analyser, sanntids kurser, teknisk og fundamental analyse for Oslo Børs og internasjonale aksjer. Gratis demo tilgjengelig.{% endblock %}
