--- a/app/templates/roi_kalkulator.html
+++ b/app/templates/roi_kalkulator.html
@@ -1,4 +1,4 @@
-{% extends "base_new.html" %}
+{% extends "base.html" %}
 
 {% block head %}
 <title>Få mer igjen for pengene med Aksjeradar.trade - ROI Kalkulator | Norge</title>
