--- a/app/templates/forum/category.html
+++ b/app/templates/forum/category.html
@@ -1,4 +1,4 @@
-{% extends "base_new.html" %}
+{% extends "base.html" %}
 
 {% block title %}{{ category_info.display_name }} | Forum | Aksjeradar{% endblock %}
 {% block description %}Diskusjoner om {{ category_info.description }} på Aksjeradar forum{% endblock %}
