--- a/app/templates/forum/index.html
+++ b/app/templates/forum/index.html
@@ -1,4 +1,4 @@
-{% extends "base_new.html" %}
+{% extends "base.html" %}
 
 {% block title %}Forum - Aksjeradar{% endblock %}
 {% block description %}Diskuter aksjer, investeringsstrategier og markedstrender med andre investorer på Aksjeradar Forum.{% endblock %}
