--- a/app/templates/norwegian_intel/government_impact.html
+++ b/app/templates/norwegian_intel/government_impact.html
@@ -1,4 +1,4 @@
-{% extends "base_new.html" %}
+{% extends "base.html" %}
 
 {% block title %}Government Impact Analyzer | Norwegian Stocks | Aksjeradar{% endblock %}
 
