--- a/app/templates/norwegian_intel/shipping_intelligence.html
+++ b/app/templates/norwegian_intel/shipping_intelligence.html
@@ -1,4 +1,4 @@
-{% extends "base_new.html" %}
+{% extends "base.html" %}
 
 {% block title %}Shipping Intelligence | Baltic Dry Index | Aksjeradar{% endblock %}
 
