--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -511,7 +511,6 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{{ url_for('main.profile') }}"><i class="fas fa-user-cog"></i> Profil</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('pricing.pricing_page') }}"><i class="fas fa-crown"></i> Abonnement</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><h6 class="dropdown-header">Innstillinger</h6></li>
                             <li><a class="dropdown-item" href="{{ url_for('notifications.settings') }}"><i class="fas fa-bell"></i> Varsler</a></li>
@@ -611,6 +610,11 @@
                     <div class="mb-2">
                         <a href="{{ url_for('main.help') }}" class="text-light text-decoration-none">
                             <i class="bi bi-question-circle me-1"></i>Hjelp & FAQ
+                        </a>
+                    </div>
+                    <div class="mb-2">
+                        <a href="/forum" class="text-light text-decoration-none">
+                            <i class="bi bi-chat-dots me-1"></i>Forum
                         </a>
                     </div>
                     <div class="mb-2">
