--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -64,7 +64,7 @@
                         <strong>Adresse:</strong> Oslo, Norge
                     </p>
                     <a href="{{ url_for('main.contact') }}" class="btn btn-primary">
-                        <i class="bi bi-envelope"></i> Kontakt oss
+                        <i class="bi bi-envelope text-white"></i> Kontakt oss
                     </a>
                 </div>
             </div>
