--- a/templates/financial_dashboard.html
+++ b/templates/financial_dashboard.html
@@ -49,7 +49,7 @@
                                         </span>
                                     </td>
                                     <td>
-                                        <a href="{{ url_for('stocks.stock_details', symbol=symbol) }}" class="btn btn-sm btn-primary">
+                                        <a href="{{ url_for('stocks.details', symbol=symbol) }}" class="btn btn-sm btn-primary">
                                             <i class="fas fa-info-circle"></i> Detaljer
                                         </a>
                                         <a href="{{ url_for('portfolio.add_stock') }}?symbol={{ symbol }}" class="btn btn-sm btn-success">
